--- a/style.css
+++ b/style.css
@@ -664,29 +664,25 @@ header .menu {
 }
 
 .slider-manual-feedbacks {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    position: absolute;
+	display: flex;
+	justify-content: center;
+	gap: 20px;
+}
+
+.slider-manual-feedbacks .btn{
+    background-color: #000;
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+	border: 2px solid transparent;
+	cursor: pointer;
+	border-color: #ffffff;
     z-index: 100;
-    bottom: 0;
 }
 
-.slider-manual-feedbacks ul {
-    display: flex;
+.slider-manual-feedbacks .btn.active{
+    background-color: #1d8346;
 }
-
-.slider-manual-feedbacks ul li {
-    margin: 20px;
-    color: #000;
-}
-
-
-.slider-manual-feedbacks ul li.active {
-    color: aqua;
-}
-
 
 
 @media(max-width:475px) {
